--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ install:
   - python run.py -t &
 
 before_script:
-  - "sleep 2"
+  - sleep 5
   # lint JS in default eslint task
   - npm run lint
   - npm run build
@@ -58,4 +58,5 @@ before_script:
 # now run the tests!
 script:
   - nosetests
+  - sleep 5
   - npm run test:js -- --reporters="runner" --firefoxBinary=`which firefox`
